- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.12
- 
    None
- 
        338cf32da6e64866ef598749ebe47854a0fb120e
mitch@mitch-ubuntu-18:~/dev/qt5.12/qtquickcontrols2/src/imports/templates$ ~/dev/qt5.12-debug/qtbase/bin/qmlplugindump -nonrelocatable -dependencies dependencies.json QtQuick.Templates 2.5 > plugins.qmltypes 
ASAN:DEADLYSIGNAL
=================================================================
==13781==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000008 (pc 0x7f060d3f31da bp 0x7ffd53ae6df0 sp 0x7ffd53ae6de0 T0)
==13781==The signal is caused by a READ memory access.
==13781==Hint: address points to the zero page.
    #0 0x7f060d3f31d9 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::operator->() const /home/mitch/dev/qt5.12-debug/qtbase/include/QtCore/../../../../qt5.12/qtbase/src/corelib/tools/qscopedpointer.h:118
    #1 0x7f060d3f31d9 in decltype (({parm#1}.(operator->))()) qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > >(QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > const&) /home/mitch/dev/qt5.12-debug/qtbase/include/QtCore/../../../../qt5.12/qtbase/src/corelib/global/qglobal.h:1038
    #2 0x7f060d3f31d9 in QQuickItem::d_func() /home/mitch/dev/qt5.12-debug/qtbase/include/QtQuick/../../../../qt5.12/qtdeclarative/src/quick/items/qquickitem.h:465
    #3 0x7f060d3f31d9 in QQuickItemPrivate::get(QQuickItem*) /home/mitch/dev/qt5.12-debug/qtbase/include/QtQuick/5.12.0/QtQuick/private/../../../../../../../qt5.12/qtdeclarative/src/quick/items/qquickitem_p.h:254
    #4 0x7f060d3f31d9 in QQuickHoverHandler::~QQuickHoverHandler() /home/mitch/dev/qt5.12/qtdeclarative/src/quick/handlers/qquickhoverhandler.cpp:69
    #5 0x7f060cece7d0 in QQmlPrivate::QQmlElement<QQuickHoverHandler>::~QQmlElement() /home/mitch/dev/qt5.12-debug/qtbase/include/QtQml/../../../../qt5.12/qtdeclarative/src/qml/qml/qqmlprivate.h:103
    #6 0x7f060cece7d0 in QQmlPrivate::QQmlElement<QQuickHoverHandler>::~QQmlElement() /home/mitch/dev/qt5.12-debug/qtbase/include/QtQml/../../../../qt5.12/qtdeclarative/src/qml/qml/qqmlprivate.h:103
    #7 0x7f06086267ef in qDeleteInEventHandler(QObject*) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qobject.cpp:4617
    #8 0x7f060862cafb in QObject::event(QEvent*) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qobject.cpp:1249
    #9 0x7f060857b9b8 in QCoreApplicationPrivate::notify_helper(QObject*, QEvent*) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qcoreapplication.cpp:1198
    #10 0x7f060857bc07 in doNotify /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qcoreapplication.cpp:1128
    #11 0x7f060857c0d6 in QCoreApplication::notify(QObject*, QEvent*) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qcoreapplication.cpp:1114
    #12 0x7f060a270894 in QGuiApplication::notify(QObject*, QEvent*) /home/mitch/dev/qt5.12/qtbase/src/gui/kernel/qguiapplication.cpp:1779
    #13 0x7f060857be76 in QCoreApplication::notifyInternal2(QObject*, QEvent*) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qcoreapplication.cpp:1038
    #14 0x7f060857c788 in QCoreApplication::sendEvent(QObject*, QEvent*) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qcoreapplication.cpp:1428
    #15 0x7f060858d9f9 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qcoreapplication.cpp:1777
    #16 0x7f060858f7fc in QCoreApplication::sendPostedEvents(QObject*, int) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qcoreapplication.cpp:1631
    #17 0x7f06086d5077 in postEventSourceDispatch /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:276
    #18 0x7f0604d89286 in g_main_context_dispatch (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x4c286)
    #19 0x7f0604d894bf  (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x4c4bf)
    #20 0x7f0604d8954b in g_main_context_iteration (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x4c54b)
    #21 0x7f06086d3612 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:422
    #22 0x7f05feaeba9a in QPAEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) /home/mitch/dev/qt5.12/qtbase/src/platformsupport/eventdispatchers/qeventdispatcher_glib.cpp:69
    #23 0x7f0608574a1b in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qeventloop.cpp:134
    #24 0x7f0608575e30 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qeventloop.cpp:212
    #25 0x7f0608594290 in QCoreApplication::exec() /home/mitch/dev/qt5.12/qtbase/src/corelib/kernel/qcoreapplication.cpp:1341
    #26 0x555e97937fbc in main /home/mitch/dev/qt5.12/qtdeclarative/tools/qmlplugindump/main.cpp:1360
    #27 0x7f0607681b96 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b96)
    #28 0x555e9791f6b9 in _start (/home/mitch/dev/qt5.12-debug/qtbase/bin/qmlplugindump+0xc6b9)
AddressSanitizer can not provide additional info.
SUMMARY: AddressSanitizer: SEGV /home/mitch/dev/qt5.12-debug/qtbase/include/QtCore/../../../../qt5.12/qtbase/src/corelib/tools/qscopedpointer.h:118 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::operator->() const
==13781==ABORTING
| For Gerrit Dashboard: QTBUG-70142 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 239499,2 | Fix potential nullptr-deref | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |