Fix potential nullptr-deref

Task-number: QTBUG-70142
Change-Id: I97fe80e94a553d81695f4516e84ff8ac0d086347
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>